--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -23,7 +23,7 @@
 
   <body>
     <a href="#list-restaurant" class="skip-link">Skip To Content</a>
-    <header>
+    <header class="header">
       <div class="container">
         <a href="/">
           <img
@@ -72,7 +72,7 @@
       <a href="/">
         <img src="./images/Go-Restoran.png" alt="logo image" class="img-logo" />
       </a>
-      <p>Copyright &copy; 2021</p>
+      <p>Copyright &copy; 2021 - Go-Restoran</p>
     </footer>
   </body>
 </html>
