--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -52,16 +52,26 @@ a {
 }
 
 /* Header CSS */
+
+.bg-header {
+  background-color: #414f5c;
+  box-shadow: 0 1px 6px 0 #20212447;
+}
+
 header {
-  background-color: coral;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 70px;
+  z-index: 1;
+  transition: background-color 0.4s ease 0s;
 
   .container {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    width: 100%;
-    height: 80px;
+    height: 100%;
 
     .menu {
       color: white;
@@ -105,10 +115,14 @@ header {
 /* Hero CSS */
 .hero {
   position: relative;
+  height: 450px;
+
   img {
     width: 100%;
-    max-height: 100vh;
+    height: 100%;
     object-fit: cover;
+
+    object-position: top;
   }
   h1 {
     position: absolute;
@@ -117,10 +131,20 @@ header {
     margin-right: -50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    background-color: coral;
 
-    font-size: 32px;
+    font-size: 42px;
+    line-height: 48px;
     color: white;
+  }
+
+  &::before {
+    content: "\A";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.2);
   }
 }
 
@@ -175,10 +199,11 @@ header {
 
 // Footer CSS
 footer {
-  background-color: coral;
+  background-color: #414f5c;
   @include centering-flex();
   padding: 10px 0;
-  gap: 10px;
+  gap: 5px;
+  flex-direction: column;
   p {
     font-size: 14px;
     color: white;
